--- a/src/main/resources/prod/env.properties
+++ b/src/main/resources/prod/env.properties
@@ -3,3 +3,9 @@
 # and open the template in the editor.
 
 geth.url=http://localhost:8102
+geth.networkid=1006
+geth.datadir=/.ethereum
+geth.genesis=/genesis/genesis_block.json
+geth.rpcport=8102
+geth.rpcapi.list=admin,db,eth,debug,miner,net,shh,txpool,personal,web3
+geth.log=/logs
