--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,18 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring.version>4.1.2.RELEASE</spring.version>
     </properties>
+    
+    <distributionManagement>
+        <repository>
+            <id>caonpd-releases</id>
+            <url>https://repo.jpmchase.net/maven/content/repositories/CAONPD</url>
+        </repository>
+        <snapshotRepository>
+            <id>caonpd-snapshots</id>
+            <uniqueVersion>false</uniqueVersion>
+            <url>https://repo.jpmchase.net/maven/content/repositories/CAONPD-SNAPSHOT</url>
+        </snapshotRepository>
+    </distributionManagement>
 
     <dependencies>
         <dependency>
@@ -49,7 +61,7 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
             <version>1.7.7</version>
-    </dependency>
+        </dependency>
         <!-- test dependencies -->
         <dependency>
             <groupId>junit</groupId>
