--- a/pom.xml
+++ b/pom.xml
@@ -3,18 +3,18 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.jpmorgan.ib.caonpd</groupId>
-    <artifactId>ethereum-enterperise</artifactId>
+      <artifactId>ethereum-enterprise</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
-    <name>ethereum-enterperise</name>
+    <name>ethereum-enterprise</name>
 
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring.version>4.1.2.RELEASE</spring.version>
     </properties>
-    
+
     <distributionManagement>
         <repository>
             <id>caonpd-releases</id>
@@ -44,7 +44,7 @@
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>1.7.1</version>
-        </dependency>                
+        </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
