--- a/pom.xml
+++ b/pom.xml
@@ -90,10 +90,10 @@
             <type>jar</type>
         </dependency>
         <dependency>
-            <groupId>javax</groupId>
-            <artifactId>javaee-web-api</artifactId>
-            <version>6.0</version>
-            <scope>provided</scope>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>tomcat-catalina</artifactId>
+            <version>8.0.28</version>
+            <scope>test</scope>
         </dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
