--- a/pom.xml
+++ b/pom.xml
@@ -100,18 +100,29 @@
             <version>6.9.6</version>
             <scope>test</scope>
         </dependency>
+
+        <!-- servlet api impl -->
         <dependency>
             <groupId>org.apache.tomcat</groupId>
             <artifactId>tomcat-catalina</artifactId>
             <version>8.0.28</version>
             <scope>test</scope>
         </dependency>
+
+        <!-- bean validator api impl -->
         <dependency>
             <groupId>org.apache.bval</groupId>
             <artifactId>org.apache.bval.bundle</artifactId>
             <version>0.5</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.geronimo.specs</groupId>
+            <artifactId>geronimo-validation_1.0_spec</artifactId>
+            <version>1.1</version>
+            <scope>test</scope>
+        </dependency>
+
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
