--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,14 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- javax.persistence api impl -->
+        <dependency>
+            <groupId>org.hibernate.javax.persistence</groupId>
+            <artifactId>hibernate-jpa-2.0-api</artifactId>
+            <version>1.0.1.Final</version>
+            <scope>test</scope>
+        </dependency>
+
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
