fix for pid when non-standard tomcat installation is present. Courtesy of  Mr. Felix

--- a/src/main/resources/test/env.properties
+++ b/src/main/resources/test/env.properties
@@ -6,3 +6,4 @@ geth.rpcport=8102
 geth.rpcapi.list=admin,db,eth,debug,miner,net,shh,txpool,personal,web3
 geth.log=/logs
 geth.auto.start=false
+geth.apistore.url=https://appstore-dev.ny.jpmorgan.com:5143
