--- a/src/main/resources/local/env.properties
+++ b/src/main/resources/local/env.properties
@@ -10,4 +10,5 @@ geth.rpcport=8102
 geth.rpcapi.list=admin,db,eth,debug,miner,net,shh,txpool,personal,web3
 geth.log=/logs
 geth.auto.start=true
+geth.auto.stop=true
 geth.apistore.url=https://appstore-dev.ny.jpmorgan.com:5143
