fix for windows startup (slash in front of C:) as well as ability to control auto stop. On local (developer machine) geth will be shutdown when tomcat is shutdown. On other environments (dev, uat, prod) it wont. It is  also controlled just add geth.auto.stop=true to the corresponding properties file.l

--- a/src/main/resources/test/env.properties
+++ b/src/main/resources/test/env.properties
@@ -5,5 +5,6 @@ geth.genesis=/genesis/genesis_block.json
 geth.rpcport=8102
 geth.rpcapi.list=admin,db,eth,debug,miner,net,shh,txpool,personal,web3
 geth.log=/logs
+geth.auto.stop=true
 geth.auto.start=false
 geth.apistore.url=https://appstore-dev.ny.jpmorgan.com:5143
