--- a/src/main/resources/dev/env.properties
+++ b/src/main/resources/dev/env.properties
@@ -9,5 +9,6 @@ geth.genesis=/genesis/genesis_block.json
 geth.rpcport=8102
 geth.rpcapi.list=admin,db,eth,debug,miner,net,shh,txpool,personal,web3
 geth.log=/logs
+geth.auto.stop=true
 geth.auto.start=true
 geth.apistore.url=https://appstore-dev.ny.jpmorgan.com:5143
