added cors property validation

--- a/src/main/resources/local/env.properties
+++ b/src/main/resources/local/env.properties
@@ -12,3 +12,4 @@ geth.log=/logs
 geth.auto.start=true
 geth.auto.stop=true
 geth.apistore.url=https://appstore-dev.ny.jpmorgan.com:5143
+geth.cors.enabled=true
