--- a/src/main/resources/prod/env.properties
+++ b/src/main/resources/prod/env.properties
@@ -9,5 +9,8 @@ geth.genesis=/genesis/genesis_block.json
 geth.rpcport=8102
 geth.rpcapi.list=admin,db,eth,debug,miner,net,shh,txpool,personal,web3
 geth.log=/logs
+geth.verbosity=
+geth.identity=
+geth.mining=
 geth.auto.start=true
 geth.apistore.url=https://appstore.jpmorgan.com
