added code to get basic node info

--- a/src/main/resources/test/env.properties
+++ b/src/main/resources/test/env.properties
@@ -8,6 +8,6 @@ geth.log=/logs
 geth.verbosity=
 geth.identity=
 geth.mining=
-geth.auto.stop=true
+geth.auto.stop=false
 geth.auto.start=false
 geth.apistore.url=https://appstore-dev.ny.jpmorgan.com:5143
