cleanup env props; use different ports for test env

--- a/src/main/resources/local/env.properties
+++ b/src/main/resources/local/env.properties
@@ -1,7 +1,3 @@
-# To change this license header, choose License Headers in Project Properties.
-# To change this template file, choose Tools | Templates
-# and open the template in the editor.
-
 geth.url=http://localhost:8102
 geth.networkid=1006
 geth.datadir=/.ethereum
@@ -15,4 +11,4 @@ geth.mining=
 geth.auto.start=true
 geth.auto.stop=true
 geth.apistore.url=https://appstore-dev.ny.jpmorgan.com:5143
-geth.cors.enabled=true
+geth.cors.enabled=false
