--- a/src/main/resources/test/env.properties
+++ b/src/main/resources/test/env.properties
@@ -1,4 +1,5 @@
 geth.url=http://localhost:8103
+geth.node.port=30404
 geth.networkid=1007
 geth.datadir=/.ethereum-test
 geth.genesis=/genesis/genesis_block.json
