--- a/src/main/resources/local/env.properties
+++ b/src/main/resources/local/env.properties
@@ -1,4 +1,5 @@
 geth.url=http://localhost:8102
+geth.node.port=30303
 geth.networkid=1006
 geth.datadir=/.ethereum
 geth.genesis=/genesis/genesis_block.json
