--- a/pom.xml
+++ b/pom.xml
@@ -152,6 +152,13 @@
             <version>6.0</version>
             <scope>provided</scope>
         </dependency>
+
+		<dependency>
+			<groupId>org.bouncycastle</groupId>
+			<artifactId>bcprov-jdk15on</artifactId>
+			<version>1.52</version>
+		</dependency>
+
     </dependencies>
 
     <build>
