[NPDAPPS-2070] automatically insert created Contracts into Registry

--- a/src/main/resources/test/env.properties
+++ b/src/main/resources/test/env.properties
@@ -1,3 +1,4 @@
+config.version=3
 geth.url=http://localhost:8103
 geth.node.port=30404
 geth.networkid=1007
@@ -12,3 +13,5 @@ geth.mining=
 geth.auto.stop=false
 geth.auto.start=false
 geth.apistore.url=https://appstore-dev.ny.jpmorgan.com:5143
+geth.cors.enabled=false
+contract.poll.delay.millis=50
