--- a/src/main/resources/prod/env.properties
+++ b/src/main/resources/prod/env.properties
@@ -10,4 +10,7 @@ geth.verbosity=
 geth.identity=
 geth.mining=
 geth.auto.start=true
+geth.auto.stop=false
 geth.apistore.url=https://appstore.jpmorgan.com
+geth.cors.enabled=true
+contract.poll.delay.millis=5000
