1. WS - https://issuetracking.jpmchase.net/jira5/browse/NPDAPPS-2047 2. Added transaction handling 3. aded test_trans.html to test transaction ws

--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,12 @@
             <artifactId>bcprov-jdk15on</artifactId>
             <version>1.52</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-collections4</artifactId>
+            <version>4.0</version>
+            <type>jar</type>
+        </dependency>
         
         <!-- test dependencies -->
         <dependency>
@@ -175,7 +181,7 @@
             <version>1.0.1.Final</version>
             <scope>test</scope>
         </dependency>
-     
+        
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
