Track the Blocks & Transactions in an embedded db
* We need to maintain our own db so we can query the chain more easily
* (for instance to get a list of transactions for a given contract)

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -4,6 +4,9 @@
 
 log4j.rootLogger=info, stdout, R
 
+log4j.category.com.jpmorgan.ib.caonpd.ethereum.enterprise=INFO, stdout
+log4j.additivity.com.jpmorgan.ib.caonpd.ethereum.enterprise=false
+
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 
