--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -1,5 +1,8 @@
 log4j.rootLogger=info, stdout
 
+log4j.category.com.jpmorgan.ib.caonpd.ethereum.enterprise=INFO, stdout
+log4j.additivity.com.jpmorgan.ib.caonpd.ethereum.enterprise=false
+
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 
