--- a/src/main/resources/dev/env.properties
+++ b/src/main/resources/dev/env.properties
@@ -7,7 +7,7 @@ geth.rpcapi.list=admin,db,eth,debug,miner,net,shh,txpool,personal,web3
 geth.log=/logs
 geth.verbosity=
 geth.identity=
-geth.mining=
+geth.mining=true
 geth.auto.stop=true
 geth.auto.start=true
 geth.apistore.url=https://appstore-dev.ny.jpmorgan.com:5143
