fixed contract deploys via nginx

--- a/src/test/resources/nginx/nginx.conf
+++ b/src/test/resources/nginx/nginx.conf
@@ -19,6 +19,9 @@ http {
 
     access_log  /dev/stdout main;
 
+    client_body_temp_path target/nginx_tmp;
+    proxy_temp_path target/nginx_tmp;
+
     sendfile        on;
     #tcp_nopush     on;
     keepalive_timeout  120;
