--- a/pom.xml
+++ b/pom.xml
@@ -160,6 +160,11 @@
             <version>3.3.2</version>
             <type>jar</type>
         </dependency>
+		<dependency>
+		  <groupId>org.apache.commons</groupId>
+		  <artifactId>commons-math3</artifactId>
+		  <version>3.6</version>
+		</dependency>
 
         <!-- CRYPTO -->
         <dependency>
