updated log patterns

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -2,16 +2,23 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 
-log4j.rootLogger=info, stdout, R
+log4j.rootLogger=INFO, stdout, R
 
 log4j.category.com.jpmorgan.ib.caonpd.ethereum.enterprise=INFO, stdout
 log4j.additivity.com.jpmorgan.ib.caonpd.ethereum.enterprise=false
+
+log4j.category.com.jpmorgan.ib.caonpd.ethereum.enterprise.service.BlockScanner=INFO, stdout
+log4j.additivity.com.jpmorgan.ib.caonpd.ethereum.enterprise.service.BlockScanner=false
+
+log4j.category.com.jpmorgan.ib.caonpd.ethereum.enterprise.service.impl.GethHttpServiceImpl=INFO, stdout
+log4j.additivity.com.jpmorgan.ib.caonpd.ethereum.enterprise.service.impl.GethHttpServiceImpl=false
+
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 
 # Pattern to output the caller's file name and line number.
-log4j.appender.stdout.layout.ConversionPattern=%5p [%t] (%F:%L) - %m%n
+log4j.appender.stdout.layout.ConversionPattern=%5p %d [%t] (%F:%-3L) %m%n
 
 log4j.appender.R=org.apache.log4j.RollingFileAppender
 log4j.appender.R.File=${catalina.home}/logs/meth.log
@@ -21,5 +28,5 @@ log4j.appender.R.MaxFileSize=10000KB
 log4j.appender.R.MaxBackupIndex=1
 
 log4j.appender.R.layout=org.apache.log4j.PatternLayout
-log4j.appender.R.layout.ConversionPattern=%p %t %c - %m%n
+log4j.appender.R.layout.ConversionPattern=%p %d %t %c - %m%n
 
