set max verbosity for unit tests

--- a/src/main/resources/test/env.properties
+++ b/src/main/resources/test/env.properties
@@ -6,7 +6,7 @@ geth.datadir=/.ethereum-test
 geth.rpcport=8103
 geth.rpcapi.list=admin,db,eth,debug,miner,net,shh,txpool,personal,web3
 geth.log=/logs
-geth.verbosity=
+geth.verbosity=6
 geth.identity=
 geth.mining=
 geth.auto.stop=false
