added new geth.db.enabled prop

--- a/src/main/resources/dev/env.properties
+++ b/src/main/resources/dev/env.properties
@@ -13,3 +13,4 @@ geth.auto.start=true
 geth.apistore.url=https://appstore-dev.ny.jpmorgan.com:5143
 geth.cors.enabled=false
 contract.poll.delay.millis=5000
+geth.db.enabled=true
