--- a/src/main/resources/test/env.properties
+++ b/src/main/resources/test/env.properties
@@ -14,3 +14,4 @@ geth.auto.start=false
 geth.apistore.url=https://appstore-dev.ny.jpmorgan.com:5143
 geth.cors.enabled=false
 contract.poll.delay.millis=50
+geth.db.enabled=true
