--- a/src/main/resources/uat/env.properties
+++ b/src/main/resources/uat/env.properties
@@ -13,3 +13,4 @@ geth.auto.stop=true
 geth.apistore.url=https://appstore-uat.jpmorgan.com
 geth.cors.enabled=true
 contract.poll.delay.millis=5000
+geth.db.enabled=true
