--- a/src/main/resources/demo/env.properties
+++ b/src/main/resources/demo/env.properties
@@ -13,3 +13,4 @@ geth.auto.start=true
 geth.apistore.url=https://appstore.jpmorgan.com
 geth.cors.enabled=true
 contract.poll.delay.millis=5000
+geth.db.enabled=true
