--- a/src/main/resources/prod/env.properties
+++ b/src/main/resources/prod/env.properties
@@ -13,3 +13,4 @@ geth.auto.stop=false
 geth.apistore.url=https://appstore.jpmorgan.com
 geth.cors.enabled=true
 contract.poll.delay.millis=5000
+geth.db.enabled=false
