--- a/pom.xml
+++ b/pom.xml
@@ -165,6 +165,11 @@
 		  <artifactId>commons-math3</artifactId>
 		  <version>3.6</version>
 		</dependency>
+		<dependency>
+		  <groupId>com.squareup.okhttp3</groupId>
+		  <artifactId>okhttp</artifactId>
+		  <version>3.2.0</version>
+		</dependency>
 
         <!-- CRYPTO -->
         <dependency>
