--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -21,7 +21,7 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%5p %d [%t] (%F:%-3L) %m%n
 
 log4j.appender.R=org.apache.log4j.RollingFileAppender
-log4j.appender.R.File=${catalina.home}/logs/meth.log
+log4j.appender.R.File=${logging.path}/logs/meth.log
 
 log4j.appender.R.MaxFileSize=10000KB
 # Keep one backup file
