added spring boot actuator

--- a/src/main/resources/prod/env.properties
+++ b/src/main/resources/prod/env.properties
@@ -14,3 +14,7 @@ geth.apistore.url=https://appstore.jpmorgan.com
 geth.cors.enabled=true
 contract.poll.delay.millis=5000
 geth.db.enabled=false
+
+# spring boot actuator
+management.context-path=/manage
+endpoints.actuator.enabled=true
