--- a/src/main/resources/test/env.properties
+++ b/src/main/resources/test/env.properties
@@ -6,7 +6,7 @@ geth.datadir=/.ethereum-test
 geth.rpcport=8103
 geth.rpcapi.list=admin,db,eth,debug,miner,net,shh,txpool,personal,web3
 geth.log=/logs
-geth.verbosity=6
+geth.verbosity=3
 geth.identity=
 geth.mining=
 geth.auto.stop=false
@@ -15,3 +15,7 @@ geth.apistore.url=https://appstore-dev.ny.jpmorgan.com:5143
 geth.cors.enabled=false
 contract.poll.delay.millis=50
 geth.db.enabled=true
+
+# spring boot actuator
+management.context-path=/manage
+endpoints.actuator.enabled=true
