--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,32 +1,34 @@
-# To change this license header, choose License Headers in Project Properties.
-# To change this template file, choose Tools | Templates
-# and open the template in the editor.
 
-log4j.rootLogger=INFO, stdout, R
+log4j.rootLogger=WARN, stdout, R
 
-log4j.category.com.jpmorgan.ib.caonpd.ethereum.enterprise=INFO, stdout
-log4j.additivity.com.jpmorgan.ib.caonpd.ethereum.enterprise=false
+log4j.category.com.jpmorgan.ib.caonpd.ethereum.enterprise.config.LoggingInterceptor=INFO, accesslog
+log4j.additivity.com.jpmorgan.ib.caonpd.ethereum.enterprise.config.LoggingInterceptor=false
 
-log4j.category.com.jpmorgan.ib.caonpd.ethereum.enterprise.service.BlockScanner=INFO, stdout
-log4j.additivity.com.jpmorgan.ib.caonpd.ethereum.enterprise.service.BlockScanner=false
+log4j.category.com.jpmorgan.ib.caonpd.ethereum.enterprise.service.impl.WebSocketPushServiceImpl=INFO, stdout
+log4j.additivity.com.jpmorgan.ib.caonpd.ethereum.enterprise.service.impl.WebSocketPushServiceImpl=false
 
-log4j.category.com.jpmorgan.ib.caonpd.ethereum.enterprise.service.impl.GethHttpServiceImpl=INFO, stdout
-log4j.additivity.com.jpmorgan.ib.caonpd.ethereum.enterprise.service.impl.GethHttpServiceImpl=false
+log4j.category.com.jpmorgan.ib.caonpd.ethereum.enterprise.db.BlockScanner=INFO, stdout
+log4j.additivity.com.jpmorgan.ib.caonpd.ethereum.enterprise.db.BlockScanner=false
 
+log4j.category.com.jpmorgan.ib.caonpd.ethereum.enterprise.db.MetricsBlockListener=INFO, stdout
+log4j.additivity.com.jpmorgan.ib.caonpd.ethereum.enterprise.db.MetricsBlockListener=false
 
+# STDOUT 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-
-# Pattern to output the caller's file name and line number.
 log4j.appender.stdout.layout.ConversionPattern=%5p %d [%t] (%F:%-3L) %m%n
 
+# ACCESS LOG (STDOUT)
+log4j.appender.accesslog=org.apache.log4j.ConsoleAppender
+log4j.appender.accesslog.layout=org.apache.log4j.PatternLayout
+log4j.appender.accesslog.layout.ConversionPattern=%5p %d %m%n
+
+# FILE
 log4j.appender.R=org.apache.log4j.RollingFileAppender
 log4j.appender.R.File=${logging.path}/logs/meth.log
 
 log4j.appender.R.MaxFileSize=10000KB
-# Keep one backup file
 log4j.appender.R.MaxBackupIndex=1
 
 log4j.appender.R.layout=org.apache.log4j.PatternLayout
 log4j.appender.R.layout.ConversionPattern=%p %d %t %c - %m%n
-
