Moved to new cakeshop package

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,19 +1,19 @@
 
 log4j.rootLogger=WARN, stdout, R
 
-log4j.category.com.jpmorgan.ib.caonpd.ethereum.enterprise.config.LoggingInterceptor=INFO, accesslog
-log4j.additivity.com.jpmorgan.ib.caonpd.ethereum.enterprise.config.LoggingInterceptor=false
+log4j.category.com.jpmorgan.ib.caonpd.cakeshop.config.LoggingInterceptor=INFO, accesslog
+log4j.additivity.com.jpmorgan.ib.caonpd.cakeshop.config.LoggingInterceptor=false
 
-log4j.category.com.jpmorgan.ib.caonpd.ethereum.enterprise.service.impl.WebSocketPushServiceImpl=INFO, stdout
-log4j.additivity.com.jpmorgan.ib.caonpd.ethereum.enterprise.service.impl.WebSocketPushServiceImpl=false
+log4j.category.com.jpmorgan.ib.caonpd.cakeshop.service.impl.WebSocketPushServiceImpl=INFO, stdout
+log4j.additivity.com.jpmorgan.ib.caonpd.cakeshop.service.impl.WebSocketPushServiceImpl=false
 
-log4j.category.com.jpmorgan.ib.caonpd.ethereum.enterprise.db.BlockScanner=INFO, stdout
-log4j.additivity.com.jpmorgan.ib.caonpd.ethereum.enterprise.db.BlockScanner=false
+log4j.category.com.jpmorgan.ib.caonpd.cakeshop.db.BlockScanner=INFO, stdout
+log4j.additivity.com.jpmorgan.ib.caonpd.cakeshop.db.BlockScanner=false
 
-log4j.category.com.jpmorgan.ib.caonpd.ethereum.enterprise.db.MetricsBlockListener=INFO, stdout
-log4j.additivity.com.jpmorgan.ib.caonpd.ethereum.enterprise.db.MetricsBlockListener=false
+log4j.category.com.jpmorgan.ib.caonpd.cakeshop.db.MetricsBlockListener=INFO, stdout
+log4j.additivity.com.jpmorgan.ib.caonpd.cakeshop.db.MetricsBlockListener=false
 
-# STDOUT 
+# STDOUT
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%5p %d [%t] (%F:%-3L) %m%n
