--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
 
     <modules>
         <module>cakeshop-api</module>
+        <module>cakeshop-client-js</module>
     </modules>
 
     <build>
@@ -51,17 +52,6 @@
                         <endorseddirs>${endorsed.dir}</endorseddirs>
                     </compilerArguments>
                 </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>repackage</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
