--- a/cakeshop-api/src/test/resources/nginx/nginx.conf
+++ b/cakeshop-api/src/test/resources/nginx/nginx.conf
@@ -37,7 +37,7 @@ http {
 
       rewrite_log on;
 
-      location /ethereum-enterprise/ws {
+      location /cakeshop/ws {
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
@@ -50,7 +50,7 @@ http {
         proxy_pass        http://tomcat;
       }
 
-      location /ethereum-enterprise/api {
+      location /cakeshop/api {
         proxy_set_header  X-Real-IP           $remote_addr;
         proxy_set_header  X-Forwarded-For     $proxy_add_x_forwarded_for;
         proxy_set_header  Host                $http_host;
@@ -59,12 +59,12 @@ http {
         proxy_pass        http://tomcat;
       }
 
-      location /ethereum-enterprise {
-        rewrite ^/ethereum-enterprise(.*)$ $1 break;
+      location /cakeshop {
+        rewrite ^/cakeshop(.*)$ $1 break;
       }
 
       location = / {
-        rewrite ^/$ /ethereum-enterprise/ redirect;
+        rewrite ^/$ /cakeshop/ redirect;
       }
 
     }
