--- a/cakeshop-client-js/pom.xml
+++ b/cakeshop-client-js/pom.xml
@@ -5,13 +5,11 @@
 
     <parent>
         <groupId>com.jpmorgan.ib.caonpd</groupId>
-        <artifactId>cakeshop</artifactId>
+        <artifactId>cakeshop-parent</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>com.jpmorgan.ib.caonpd</groupId>
     <artifactId>cakeshop-client-js</artifactId>
-    <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Cakeshop.js</name>
