--- a/cakeshop-client-js/pom.xml
+++ b/cakeshop-client-js/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.jpmorgan.ib.caonpd</groupId>
         <artifactId>cakeshop-parent</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>${build.version}</version>
     </parent>
 
     <artifactId>cakeshop-client-js</artifactId>
