--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
     <groupId>com.jpmorgan.ib.caonpd</groupId>
     <artifactId>cakeshop-parent</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>${build.version}</version>
     <packaging>pom</packaging>
 
     <name>cakeshop</name>
@@ -21,6 +21,8 @@
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.7</java.version>
+
+        <build.version>1.0-SNAPSHOT</build.version>
     </properties>
 
     <distributionManagement>
@@ -37,6 +39,7 @@
 
     <modules>
         <module>cakeshop-api</module>
+        <module>cakeshop-abi</module>
         <module>cakeshop-client-java</module>
         <module>cakeshop-client-js</module>
     </modules>
