changed artifact id for client

--- a/cakeshop-client-java/pom.xml
+++ b/cakeshop-client-java/pom.xml
@@ -9,7 +9,7 @@
         <version>${build.version}</version>
     </parent>
 
-    <artifactId>cakeshop-client-java</artifactId>
+    <artifactId>cakeshop-client</artifactId>
     <packaging>jar</packaging>
 
     <name>Cakeshop Java Client</name>
