[client] cleanup deps

--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
         <module>cakeshop-api</module>
         <module>cakeshop-abi</module>
         <module>cakeshop-client-java</module>
+        <module>cakeshop-client-java-codegen</module>
         <module>cakeshop-client-js</module>
     </modules>
 
