--- a/cakeshop-api/pom.xml
+++ b/cakeshop-api/pom.xml
@@ -167,6 +167,11 @@
           <artifactId>okhttp</artifactId>
           <version>3.2.0</version>
         </dependency>
+        <dependency>
+          <groupId>com.jcabi</groupId>
+          <artifactId>jcabi-manifests</artifactId>
+          <version>1.1</version>
+        </dependency>
 
         <!-- CRYPTO -->
         <dependency>
@@ -267,6 +272,15 @@
                 <artifactId>maven-war-plugin</artifactId>
                 <configuration>
                     <failOnMissingWebXml>false</failOnMissingWebXml>
+                    <archive>
+                        <manifest>
+                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+                        </manifest>
+                        <manifestEntries>
+                            <Cakeshop-Version>${project.version}</Cakeshop-Version>
+                            <Cakeshop-Build>${buildNumber}</Cakeshop-Build>
+                        </manifestEntries>
+                    </archive>
                 </configuration>
             </plugin>
             <plugin>
@@ -279,6 +293,23 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>buildnumber-maven-plugin</artifactId>
+                <version>1.3</version>
+                <executions>
+                    <execution>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>create</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <doCheck>false</doCheck>
+                    <doUpdate>false</doUpdate>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
