[api] updated test log config

--- a/cakeshop-api/src/test/resources/log4j.properties
+++ b/cakeshop-api/src/test/resources/log4j.properties
@@ -1,10 +1,26 @@
-log4j.rootLogger=info, stdout
 
+###########
+# LOGGERS #
+###########
+
+log4j.rootLogger=INFO, stdout
+
+# geth
+log4j.category.geth=DEBUG, geth-stdout
+log4j.additivity.geth=false
+
+# cakeshop
 log4j.category.com.jpmorgan.ib.caonpd.cakeshop=INFO, stdout
 log4j.additivity.com.jpmorgan.ib.caonpd.cakeshop=false
 
+#############
+# APPENDERS #
+#############
+
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-
-# Pattern to output the caller's file name and line number.
 log4j.appender.stdout.layout.ConversionPattern=%5p %d [%t] (%F:%L) - %m%n
+
+log4j.appender.geth-stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.geth-stdout.layout=org.apache.log4j.PatternLayout
+log4j.appender.geth-stdout.layout.ConversionPattern=%m%n
