--- a/cakeshop-api/src/main/resources/config/application-local.properties
+++ b/cakeshop-api/src/main/resources/config/application-local.properties
@@ -28,4 +28,6 @@ cakeshop.mvc.async.pool.threads.core=250
 cakeshop.mvc.async.pool.threads.max=1000
 cakeshop.mvc.async.pool.queue.max=2000
 
+blockchain.cassandra.host=cib2l4280.svr.us.jpmchase.net
+
 
