--- a/cakeshop-api/src/main/resources/config/application-demo.properties
+++ b/cakeshop-api/src/main/resources/config/application-demo.properties
@@ -21,6 +21,7 @@ geth.db.enabled=true
 # spring boot actuator
 management.context-path=/manage
 endpoints.actuator.enabled=true
+blockchain.cassandra.host=cib2l4280.svr.us.jpmchase.net
 
 cakeshop.mvc.async.pool.threads.core=250
 cakeshop.mvc.async.pool.threads.max=1000
