--- a/cakeshop-api/src/main/resources/log4j.properties
+++ b/cakeshop-api/src/main/resources/log4j.properties
@@ -3,7 +3,7 @@
 # LOGGERS #
 ###########
 
-log4j.rootLogger=DEBUG, stdout, cakeshop
+log4j.rootLogger=WARN, stdout, cakeshop
 
 # geth
 log4j.category.geth=DEBUG, geth-stdout, cakeshop, geth
@@ -21,7 +21,7 @@ log4j.additivity.com.jpmorgan.ib.caonpd.cakeshop=false
 log4j.category.com.jpmorgan.ib.caonpd.cakeshop.service.impl.WebSocketPushServiceImpl=INFO, stdout, cakeshop
 log4j.additivity.com.jpmorgan.ib.caonpd.cakeshop.service.impl.WebSocketPushServiceImpl=false
 
-log4j.category.com.jpmorgan.ib.caonpd.cakeshop.db.BlockScanner=INFO, stdout, cakeshop
+log4j.category.com.jpmorgan.ib.caonpd.cakeshop.db.BlockScanner=DEBUG, stdout, cakeshop
 log4j.additivity.com.jpmorgan.ib.caonpd.cakeshop.db.BlockScanner=false
 
 log4j.category.com.jpmorgan.ib.caonpd.cakeshop.db.MetricsBlockListener=INFO, stdout, cakeshop
