--- a/cakeshop-api/src/test/resources/log4j.properties
+++ b/cakeshop-api/src/test/resources/log4j.properties
@@ -3,7 +3,7 @@
 # LOGGERS #
 ###########
 
-log4j.rootLogger=INFO, stdout
+log4j.rootLogger=DEBUG, stdout
 
 # geth
 log4j.category.geth=DEBUG, geth-stdout
