multi-db support

--- a/cakeshop-api/src/test/resources/log4j.properties
+++ b/cakeshop-api/src/test/resources/log4j.properties
@@ -3,10 +3,10 @@
 # LOGGERS #
 ###########
 
-log4j.rootLogger=DEBUG, stdout
+log4j.rootLogger=INFO, stdout
 
 # geth
-log4j.category.geth=DEBUG, geth-stdout
+log4j.category.geth=INFO, geth-stdout
 log4j.additivity.geth=false
 
 # cakeshop
