--- a/cakeshop-api/src/main/resources/config/application-test.properties
+++ b/cakeshop-api/src/main/resources/config/application-test.properties
@@ -27,4 +27,7 @@ cakeshop.mvc.async.pool.threads.core=250
 cakeshop.mvc.async.pool.threads.max=1000
 cakeshop.mvc.async.pool.queue.max=2000
 
+cakeshop.jdbc.user=sdk
+cakeshop.jdbc.pass=sdk
+
 
