--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,9 @@
 
         <hibernate.version>5.1.0.Final</hibernate.version>
         <hsqldb.version>2.3.3</hsqldb.version>
-
+        <mysql.version>5.1.9</mysql.version>
+        <postgres.version>9.3-1102-jdbc41</postgres.version>
+        <oracle.version>11.2.0.4</oracle.version>
         <junit.version>4.11</junit.version>
     </properties>
 
@@ -73,7 +75,6 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>versions-maven-plugin</artifactId>
-                <version>2.1</version>
             </plugin>
         </plugins>
     </build>
