--- a/cakeshop-api/src/main/resources/config/application-demo.properties
+++ b/cakeshop-api/src/main/resources/config/application-demo.properties
@@ -21,8 +21,16 @@ geth.db.enabled=true
 # spring boot actuator
 management.context-path=/manage
 endpoints.actuator.enabled=true
-blockchain.cassandra.host=cib2l4280.svr.us.jpmchase.net
+cakeshop.cassandra.host=cib2l4280.svr.us.jpmchase.net
 
 cakeshop.mvc.async.pool.threads.core=250
 cakeshop.mvc.async.pool.threads.max=1000
 cakeshop.mvc.async.pool.queue.max=2000
+
+cakeshop.database.vendor=oracle
+cakeshop.jndi.name=jdbc/oracle_blkchain
+
+#cakeshop.jdbc.pass=
+#cakeshop.jdbc.user=
+#cakeshop.jdbc.url=
+#cakeshop.cassandra.host=
