--- a/cakeshop-api/src/main/resources/config/application-local.properties
+++ b/cakeshop-api/src/main/resources/config/application-local.properties
@@ -28,6 +28,14 @@ cakeshop.mvc.async.pool.threads.core=250
 cakeshop.mvc.async.pool.threads.max=1000
 cakeshop.mvc.async.pool.queue.max=2000
 
-blockchain.cassandra.host=cib2l4280.svr.us.jpmchase.net
+cakeshop.database.vendor=hsqldb
+cakeshop.jdbc.user=sdk
+cakeshop.jdbc.pass=sdk
+
+#db config
+#cakeshop.jdbc.pass=
+#cakeshop.jdbc.user=
+#cakeshop.jdbc.url=
+#cakeshop.cassandra.host=
 
 
