--- a/cakeshop-api/src/main/resources/config/application.properties
+++ b/cakeshop-api/src/main/resources/config/application.properties
@@ -4,3 +4,8 @@ spring.mvc.view.suffix=.jsp
 
 server.compression.enabled=true
 server.compression.mime-types=application/json,application/xml,text/html,text/xml,text/plain
+
+
+cakeshop.hibernate.jdbc.batch_size=20
+cakeshop.hibernate.hbm2ddl.auto=update
+cakeshop.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
