--- a/cakeshop-api/src/main/resources/config/application-uat.properties
+++ b/cakeshop-api/src/main/resources/config/application-uat.properties
@@ -26,3 +26,12 @@ cakeshop.mvc.async.pool.threads.core=250
 cakeshop.mvc.async.pool.threads.max=1000
 cakeshop.mvc.async.pool.queue.max=2000
 
+cakeshop.database.vendor=oracle
+cakeshop.jndi.name=jdbc/oracle_blkchain
+
+
+#cakeshop.jdbc.pass=
+#cakeshop.jdbc.user=
+#cakeshop.jdbc.url=
+#cakeshop.cassandra.host=
+
