disabled oracle in local. enabled oracle for testing in dev

--- a/cakeshop-api/src/main/resources/config/application-local.properties
+++ b/cakeshop-api/src/main/resources/config/application-local.properties
@@ -29,8 +29,8 @@ cakeshop.mvc.async.pool.threads.max=1000
 cakeshop.mvc.async.pool.queue.max=2000
 
 #db config
-cakeshop.database.vendor=oracle
-cakeshop.jndi.name=jdbc/oracle_blkchain
+#cakeshop.database.vendor=oracle
+#cakeshop.jndi.name=jdbc/oracle_blkchain
 
 cakeshop.database.vendor=hsqldb
 cakeshop.jdbc.user=sdk
