--- a/cakeshop-api/src/main/resources/config/application-test.properties
+++ b/cakeshop-api/src/main/resources/config/application-test.properties
@@ -30,6 +30,7 @@ cakeshop.mvc.async.pool.queue.max=2000
 cakeshop.database.vendor=hsqldb
 cakeshop.jdbc.user=sdk
 cakeshop.jdbc.pass=sdk
+cakeshop.hibernate.jdbc.batch_size=20
 
 
 
