skip node_modules when building war

--- a/cakeshop-api/pom.xml
+++ b/cakeshop-api/pom.xml
@@ -304,6 +304,7 @@
 							<Cakeshop-Build-Date>${timestamp}</Cakeshop-Build-Date>
 						</manifestEntries>
 					</archive>
+					<warSourceExcludes>**/node_modules/</warSourceExcludes>
 				</configuration>
 			</plugin>
 			<plugin>
